# chart-matlab-python-migration

hazard-curves/: pyproject.toml
hazard-curves/matlab/: SSv1.0_Forced_Sta50_2195_CHS-NA_SP6021.mat  aef2aep.m  aep2aef.m  jpm_call_example.m  normal_curve_discretizer.m  pst_call_example.m
hazard-curves/matlab/PST/: KernReg_LocalMean.m  StormSim_MRL.m  StormSim_POT.m  StormSim_PST.m  StormSim_PST_Fit.m  ecdf_boot.m
hazard-curves/src/hazard_curves/: __init__.py  common.py  jpm.py  pot.py
hazard-curves/src/hazard_curves/jpm/: __init__.py  core.py  jpm.py  plot.py
hazard-curves/src/hazard_curves/pst/: core.py  fit.py  mrl.py  pst.py
hazard-curves/tests/: matlab2parquet.py  test_jpm.py  tools.py
hazard-curves/tests/data/: ecdf_indices.mat  jpm_input.mat  mrl_step3.mat  pst_hc_emp.mat  pst_pd_k_mod.mat  pst_pd_k_wOut.mat  pst_summary.mat
hazard-curves/tests/input_data/: jpm_input.parquet  jpm_output_plt.parquet  jpm_output_tbl.parquet
hazard-curves/tests/matlab_data/: ecdf_boot.mat  ecdf_emphc.mat  ecdf_random.mat  jpm_output.mat  mrl_step4.mat  processed_data.mat  pst_hc_plt.mat  pst_hc_plt_x.mat
resources/project/CiOEeElPoMYUtR5zWXs4djL9CuE/: ZXJyv7T547vPJS8UsV-ZJfYjUzcp.xml
resources/project/PlulfZVWj47Vvd6IbKJ3b4NIU6Y/: 0JPZjM0Ka23VHcHFLJ5MnLk9_d8p.xml  3_hQuRYd9CCYN4uFS3OE6Nxyiigp.xml  RRBwAGa086SvBazl106yKWOysX0p.xml  dZg0U_xCSpk-33Wh4vQ7TqFozyAp.xml  (+6 more)
tests/charleston_csrm/: Charleston_CSRM_Processing_FINAL.m  Charleston_CSRM_Processing_INITIAL.m  Charleston_CSRM_SP_Selection.m  Demonstration_StormSelectionHazardMatching_simplified.m
(+65 files in other folders)
