[tool.poetry]
name = "hazard-curves"
version = "0.1.0"
description = "Conversion of StormSim Hazard Curve MATLAB code"
authors = ["Lam, Michael-Angelo Y <michael.Y.lam@erdc.dren.mil>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
tables = "^3.10.2"
pandas = "^2.3.3"
scipy = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
